# new_songs_enjoyer

./: .env.example  .gitignore  LICENSE.md  README.md  SOUNDCLOUD_OAUTH_SETUP.md  USAGE.md  config.example.yaml  config.multi-platform.yaml  config.py  config.soundcloud-only.yaml  config.yaml  main.py  platform_filter.py  pyproject.toml  requirements.txt  run.py  web_server.py
.kiro/specs/spotify-favorites-filtering/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
adapter/: __init__.py  soundcloud_adapter.py
docs/: SOUNDCLOUD_OAUTH_SETUP.md  SOUNDCLOUD_SETUP.md  SPOTIFY_SETUP.md  TROUBLESHOOTING.md
entities/: __init__.py  api_response.py  filter_result.py  playlist.py  track.py
templates/: playlist_template.html  playlist_template.py
tests/: __init__.py  mock_soundcloud_test.py  run_tests.py  test_config.py  test_error_handling_filtering.py  test_filter_result.py  test_filtering_statistics_display.py  test_integration_filtering.py  test_oauth_workflow.py  test_platform_filter.py  test_soundcloud_error_handling.py  test_soundcloud_import.py  test_soundcloud_liked_tracks.py  test_soundcloud_search.py  test_web_interface_filtering.py
